postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: postgres-app
  ports:
    - protocol: TCP
      port: 5432
