destination-rule-all.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: django-web
spec:
  host: django-web
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: db
spec:
  host: db
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx
  subsets:
  - name: v1
    labels:
      version: v1
